tests/NormalTests/paczka1/fuzzy1/26442978.err
Error in line 2: 36HAhYdtn A734 15,2
Error in line 13: S733 A734 130,46
Error in line 6: 36HAhYdtn A149 28,0
Error in line 14: 36HAhYdtn A734 24,9
Error in line 16: S733 A149 12,0
Error in line 17: 36HAhYdtn S733 29,2
Error in line 23: MejzFa S441 91,0
